# wavelets_n_rotation

./: .gitattributes  .gitignore  Dockerfile  README.md  RadFeatures_raw_ECR2024.xlsx  env.yaml  sampling_rotations.ipynb  setup.cfg
data/: RadFeatures_raw_fine_res.h5  df_performance_predict.sav  n_k-fold_cv_results_3classes.h5
feature_robustness_analysis/: io.py  plots.py  stats.py
feature_robustness_analysis/rot_aug/: im_ops.py  rot_ops.py
notebooks/: 0_sampling_rotations.ipynb  2_model_training.ipynb  feature_extraction.sh
pyradiomics_config/: config.yaml
src/feature_robustness_analysis/: io.py  plots.py  stats.py
src/feature_robustness_analysis/perf_analysis/: grid_search.py  k_fold_analysis.py
src/feature_robustness_analysis/rot_aug/: im_ops.py
tests/: test_rot_aug.py
unittest/: test_io.py  test_perf_analysis.py  test_plots.py  test_rot_aug.py  test_stats.py
