[metadata]
name             = feature_robustness_analysis
version          = 0.2.0
url              = ''
license          = MIT
author           = ML, Wong
author_email     = lun.m.wong@cuhk.edu.hk
description      = "This package is written to investigate the robustness of radiomic features."
classifiers =
    Programming Language :: Python :: 3
    Intended Audience :: Data scientists
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9


[options]
include_package_data = False
python_requires = >= 3.7
package_dir = 
    =src
packages = find:
install_requires =
    scikit-learn >= 1.0.1
    scikit-image >= 0.19.2
    pyradiomics >= 3.1.0
    simpleitk >= 2.1.1
    scipy >= 1.7.1
    joblib
    pandas >= 1.1.4
    chardet >= 4.0.0
    pingouin >= 0.4.0
    tqdm >= 4.48.2
    mri-normalization-tools >= 0.1
    mri-radiomics-toolkit
    seaborn
    openpyxl

[options.package_data]
* =
    *h5

[options.packages.find]
where=src

